--- a/index.html
+++ b/index.html
@@ -6,33 +6,64 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>My Landing Page</title>
     <body>
-      <div class="container1">
-        <div class="header-container">
-          <div class="header-logo">Header Logo</div>
-          <div class="header-links">
-            <div><a href="#">header link one</a></div>
-            <div><a href="#">header link two</a></div>
-            <div><a href="#">header link three</a></div>
+      <div class="main">
+        <div class="container1-parent">
+          <div class="container1-child">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-content">
+              <div><a href="#">header link one</a></div>
+              <div><a href="#">header link two</a></div>
+              <div><a href="#">header link three</a></div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container2">
-        <div class="header-container2">
-          <div class="header-content">
-            <div>This website is awesome</div>
+
+        <div class="container2-parent">
+          <div class="container2-child">
+            <div class="awesome">This website is </br>awesome</div>
             <div>
               This website has some subtext that goes here under the main title.
               It's a smaller font and the color is lower contrast.
             </div>
-            <div><button>Sign up</button></div>
+            <button>Sign up</button>
           </div>
-          <div class="header-image">
-            <div class="image">this is a placeholder for an image</div>
+          <div class="container2-child2">
+            <div>this is a placeholder for an image</div>
           </div>
         </div>
+
+        <div class="container3-parent">
+          <div class="container3-child">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+          </div>
+        </div>
+        <div class="container4-parent">
+          <div class="container4-child">
+            <div class="quote">
+              This is an inspiring quote, or a testimonial from a customer.
+              Maybe it's just a filling up space, or maybe people will actually
+              read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="author">-Thor, God of Thunder</div>
+          </div>
+        </div>
+        <div class="container5-parent">
+          <div class="container5-child">
+            <div>
+              Call to action! It's time!
+              <div>
+                Sign up for our product by clicking that button right over
+                there!
+              </div>
+            </div>
+            <button>Sign up</button>
+          </div>
+        </div>
+        <div class="footer">Copyright &copy; The Odin Project 2021</div>
       </div>
-      <div class="container3"></div>
-      <div class="container4"></div>
     </body>
   </head>
 </html>
