--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
           </div>
         </div>
-
+        <div class="container2-background">
         <div class="container2-parent">
           <div class="container2-child">
             <div class="awesome">This website is </br>awesome</div>
@@ -31,7 +31,7 @@
             <div>this is a placeholder for an image</div>
           </div>
         </div>
-
+        </div>
         <div class="container3-parent">
           <div class="container3-child">
             <div class="box">1</div>
@@ -43,9 +43,9 @@
         <div class="container4-parent">
           <div class="container4-child">
             <div class="quote">
-              This is an inspiring quote, or a testimonial from a customer.
+              This is an inspiring quote, or a testimonial from a </br>customer.
               Maybe it's just a filling up space, or maybe people will actually
-              read it. Who knows? All I know is that it looks nice.
+              read it. Who knows? All I know </br>is that it looks nice.
             </div>
             <div class="author">-Thor, God of Thunder</div>
           </div>
