--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
           </div>
         </div>
         <div class="container2-background">
-        <div class="container2-parent">
-          <div class="container2-child">
-            <div class="awesome">This website is </br>awesome</div>
-            <div>
-              This website has some subtext that goes here under the main title.
-              It's a smaller font and the color is lower contrast.
+          <div class="container2-parent">
+            <div class="container2-child">
+              <div class="awesome">This website is <br />awesome</div>
+              <div>
+                This website has some subtext that goes here under the main
+                title. It's a smaller font and the color is lower contrast.
+              </div>
+              <button>Sign up</button>
             </div>
-            <button>Sign up</button>
+            <div class="container2-child2">
+              <div>this is a placeholder for an image</div>
+            </div>
           </div>
-          <div class="container2-child2">
-            <div>this is a placeholder for an image</div>
-          </div>
-        </div>
         </div>
         <div class="container3-parent">
+          <div>Some random information.</div>
           <div class="container3-child">
             <div class="box">1</div>
             <div class="box">2</div>
@@ -43,17 +44,17 @@
         <div class="container4-parent">
           <div class="container4-child">
             <div class="quote">
-              This is an inspiring quote, or a testimonial from a </br>customer.
+              This is an inspiring quote, or a testimonial from a customer.
               Maybe it's just a filling up space, or maybe people will actually
-              read it. Who knows? All I know </br>is that it looks nice.
+              read it. Who knows? All I know is that it looks nice.
             </div>
             <div class="author">-Thor, God of Thunder</div>
           </div>
         </div>
-        <div class="container5-parent">
-          <div class="container5-child">
-            <div>
-              Call to action! It's time!
+        <div class="container5-background">
+          <div class="container5-parent">
+            <div class="container5-child">
+              <div class="text">Call to action! It's time!</div>
               <div>
                 Sign up for our product by clicking that button right over
                 there!
