--- a/index.html
+++ b/index.html
@@ -20,25 +20,35 @@
         <div class="container2-background">
           <div class="container2-parent">
             <div class="container2-child">
-              <div class="awesome">This website is <br />awesome</div>
-              <div>
+              <h1>This website is <br />awesome</h1>
+              <p>
                 This website has some subtext that goes here under the main
                 title. It's a smaller font and the color is lower contrast.
-              </div>
+              </p>
               <button>Sign up</button>
             </div>
             <div class="container2-child2">
-              <div>this is a placeholder for an image</div>
+              <p>this is a placeholder for an image</p>
             </div>
           </div>
         </div>
+        <h2 class="container3-header">Some random information.</h2>
         <div class="container3-parent">
-          <div>Some random information.</div>
           <div class="container3-child">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="container3-child">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="container3-child">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="container3-child">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
           </div>
         </div>
         <div class="container4-parent">
@@ -55,15 +65,15 @@
           <div class="container5-parent">
             <div class="container5-child">
               <div class="text">Call to action! It's time!</div>
-              <div>
+              <span>
                 Sign up for our product by clicking that button right over
                 there!
-              </div>
+              </span>
             </div>
             <button>Sign up</button>
           </div>
         </div>
-        <div class="footer">Copyright &copy; The Odin Project 2021</div>
+        <footer>Copyright &copy; The Odin Project 2021</footer>
       </div>
     </body>
   </head>
